--- a/content/resources/268.md
+++ b/content/resources/268.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 465551c8-c00b-6528-3e4e-00794aecdbbe
 resourcetype: Image
 title: 268.png
 uid: ece8b1d7-43db-548d-e152-af4be4b44996
