--- a/content/resources/mit7_013s18_e1s.md
+++ b/content/resources/mit7_013s18_e1s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/5f2c5035cfafebb29cecf14939d147d1_MIT7_013s18_E1S.pdf
 file_type: application/pdf
+parent_uid: e04f5ca4-80b2-e445-0dff-c11adaaab959
 resourcetype: Document
 title: 7.013 S18 Exam 1 Solutions
 uid: 5f2c5035-cfaf-ebb2-9cec-f14939d147d1
