--- a/content/resources/mit7_013s18_e2q.md
+++ b/content/resources/mit7_013s18_e2q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/a6e6797cedcc07fbf5afba9a186c8704_MIT7_013s18_E2Q.pdf
 file_type: application/pdf
+parent_uid: e04f5ca4-80b2-e445-0dff-c11adaaab959
 resourcetype: Document
 title: 7.013 S18 Exam 2
 uid: a6e6797c-edcc-07fb-f5af-ba9a186c8704
