--- a/content/resources/mit7_013s18_e2s.md
+++ b/content/resources/mit7_013s18_e2s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/132ca9b3a332da7e95b0000e552b072e_MIT7_013s18_E2S.pdf
 file_type: application/pdf
+parent_uid: e04f5ca4-80b2-e445-0dff-c11adaaab959
 resourcetype: Document
 title: 7.013 S18 Exam 2 Solutions
 uid: 132ca9b3-a332-da7e-95b0-000e552b072e
