--- a/content/resources/mit7_013s18_e3q.md
+++ b/content/resources/mit7_013s18_e3q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/6288f143e1e33c8a7708abe0c10437b7_MIT7_013s18_E3Q.pdf
 file_type: application/pdf
+parent_uid: e04f5ca4-80b2-e445-0dff-c11adaaab959
 resourcetype: Document
 title: 7.013 S18 Exam 3
 uid: 6288f143-e1e3-3c8a-7708-abe0c10437b7
