--- a/content/resources/mit7_013s18_e3s.md
+++ b/content/resources/mit7_013s18_e3s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/18c4b5b6aa2eae17b2271da995754166_MIT7_013s18_E3S.pdf
 file_type: application/pdf
+parent_uid: e04f5ca4-80b2-e445-0dff-c11adaaab959
 resourcetype: Document
 title: 7.013 S18 Exam 3 Solutions
 uid: 18c4b5b6-aa2e-ae17-b227-1da995754166
