--- a/content/resources/mit7_013s18r10q.md
+++ b/content/resources/mit7_013s18r10q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/a071dd638e2bbbe8dc370cdae5367f9c_MIT7_013s18R10Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 10
 uid: a071dd63-8e2b-bbe8-dc37-0cdae5367f9c
