--- a/content/resources/mit7_013s18r11q.md
+++ b/content/resources/mit7_013s18r11q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/677b6c24ac330802035c553cc4f56e09_MIT7_013s18R11Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 11
 uid: 677b6c24-ac33-0802-035c-553cc4f56e09
