--- a/content/resources/mit7_013s18r11s.md
+++ b/content/resources/mit7_013s18r11s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/b6884f53f299172d769ce94b0a5d114c_MIT7_013s18R11S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 11 Solutions
 uid: b6884f53-f299-172d-769c-e94b0a5d114c
