--- a/content/resources/mit7_013s18r12s.md
+++ b/content/resources/mit7_013s18r12s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/8989bd39c2aa1b49d06888c65d97c973_MIT7_013s18R12S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 12 Solutions
 uid: 8989bd39-c2aa-1b49-d068-88c65d97c973
