--- a/content/resources/mit7_013s18r13q.md
+++ b/content/resources/mit7_013s18r13q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/5cd7c3fcdfe4817877e8606da30028cb_MIT7_013s18R13Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 13
 uid: 5cd7c3fc-dfe4-8178-77e8-606da30028cb
