--- a/content/resources/mit7_013s18r13s.md
+++ b/content/resources/mit7_013s18r13s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/2b924b43d60198b8dae6d4b95f0e22f6_MIT7_013s18R13S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 13 Solutions
 uid: 2b924b43-d601-98b8-dae6-d4b95f0e22f6
