--- a/content/resources/mit7_013s18r14q.md
+++ b/content/resources/mit7_013s18r14q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/65d435a45bd8b5a25f728f4840b96808_MIT7_013s18R14Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 14
 uid: 65d435a4-5bd8-b5a2-5f72-8f4840b96808
