--- a/content/resources/mit7_013s18r15q.md
+++ b/content/resources/mit7_013s18r15q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/1a8c4d58fb1c15028181f1a57a1ccd75_MIT7_013s18R15Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 15
 uid: 1a8c4d58-fb1c-1502-8181-f1a57a1ccd75
