--- a/content/resources/mit7_013s18r15s.md
+++ b/content/resources/mit7_013s18r15s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/2a7ad62301d2279c8e5f639200cd17df_MIT7_013s18R15S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 15 Solutions
 uid: 2a7ad623-01d2-279c-8e5f-639200cd17df
