--- a/content/resources/mit7_013s18r16q.md
+++ b/content/resources/mit7_013s18r16q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/980be5a5429a898dfc9534dd30656eac_MIT7_013s18R16Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 16
 uid: 980be5a5-429a-898d-fc95-34dd30656eac
