--- a/content/resources/mit7_013s18r16s.md
+++ b/content/resources/mit7_013s18r16s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/1c75045da166e3196deab7849820fdca_MIT7_013s18R16S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 16 Solutions
 uid: 1c75045d-a166-e319-6dea-b7849820fdca
