--- a/content/resources/mit7_013s18r17q.md
+++ b/content/resources/mit7_013s18r17q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/3351ad03358ffd1cc14818d569b022d3_MIT7_013s18R17Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 17
 uid: 3351ad03-358f-fd1c-c148-18d569b022d3
