--- a/content/resources/mit7_013s18r18q.md
+++ b/content/resources/mit7_013s18r18q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/d06a5ce101b2377a7277c43be9c1c7fe_MIT7_013s18R18Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 18
 uid: d06a5ce1-01b2-377a-7277-c43be9c1c7fe
