--- a/content/resources/mit7_013s18r18s.md
+++ b/content/resources/mit7_013s18r18s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/7dc5dbfc4ca29436bc694cd6ac333743_MIT7_013s18R18S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 18 Solutions
 uid: 7dc5dbfc-4ca2-9436-bc69-4cd6ac333743
