--- a/content/resources/mit7_013s18r19q.md
+++ b/content/resources/mit7_013s18r19q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/da2216d6f96b9023dda1351581701802_MIT7_013s18R19Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 19
 uid: da2216d6-f96b-9023-dda1-351581701802
