--- a/content/resources/mit7_013s18r19s.md
+++ b/content/resources/mit7_013s18r19s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/297f7899c236250f6848a6370cf982d6_MIT7_013s18R19S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 19 Solutions
 uid: 297f7899-c236-250f-6848-a6370cf982d6
