--- a/content/resources/mit7_013s18r1q.md
+++ b/content/resources/mit7_013s18r1q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/b7f9e5234a466680692aa5344fc9aca9_MIT7_013s18R1Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 1
 uid: b7f9e523-4a46-6680-692a-a5344fc9aca9
