--- a/content/resources/mit7_013s18r1s.md
+++ b/content/resources/mit7_013s18r1s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/df06be50c7acb92bbed28eb969289b2d_MIT7_013s18R1S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 1 Solutions
 uid: df06be50-c7ac-b92b-bed2-8eb969289b2d
