--- a/content/resources/mit7_013s18r20q.md
+++ b/content/resources/mit7_013s18r20q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/e8092b883bada41de18f6a72559e4e79_MIT7_013s18R20Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 20
 uid: e8092b88-3bad-a41d-e18f-6a72559e4e79
