--- a/content/resources/mit7_013s18r2q.md
+++ b/content/resources/mit7_013s18r2q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/d5dbd98aac138d7670ec109c13257e5a_MIT7_013s18R2Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 2
 uid: d5dbd98a-ac13-8d76-70ec-109c13257e5a
