--- a/content/resources/mit7_013s18r2s.md
+++ b/content/resources/mit7_013s18r2s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/ee1ff08c018356ff961939bf8d08e42a_MIT7_013s18R2S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 2 Solutions
 uid: ee1ff08c-0183-56ff-9619-39bf8d08e42a
