--- a/content/resources/mit7_013s18r4q.md
+++ b/content/resources/mit7_013s18r4q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/f856afe9081710ec2ee3bc316f69d769_MIT7_013s18R4Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 4
 uid: f856afe9-0817-10ec-2ee3-bc316f69d769
