--- a/content/resources/mit7_013s18r4s.md
+++ b/content/resources/mit7_013s18r4s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/2f0527e15de02761b3c9207f52fca794_MIT7_013s18R4S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 4 Solutions
 uid: 2f0527e1-5de0-2761-b3c9-207f52fca794
