--- a/content/resources/mit7_013s18r5q.md
+++ b/content/resources/mit7_013s18r5q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/6d2b618f23f75c023a4e6c0727a2d961_MIT7_013s18R5Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 5
 uid: 6d2b618f-23f7-5c02-3a4e-6c0727a2d961
