--- a/content/resources/mit7_013s18r6q.md
+++ b/content/resources/mit7_013s18r6q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/a131533ebed980ea30cfaf139f7ae704_MIT7_013s18R6Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: '7.013 S18 Recitation 6 '
 uid: a131533e-bed9-80ea-30cf-af139f7ae704
