--- a/content/resources/mit7_013s18r6s.md
+++ b/content/resources/mit7_013s18r6s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/c592cfafcb8743d2735fde3be24e3919_MIT7_013s18R6S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 6 Solutions
 uid: c592cfaf-cb87-43d2-735f-de3be24e3919
