--- a/content/resources/mit7_013s18r7q.md
+++ b/content/resources/mit7_013s18r7q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/5fbfc2495bdd2ba38fc5b7f337a9114d_MIT7_013s18R7Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 7
 uid: 5fbfc249-5bdd-2ba3-8fc5-b7f337a9114d
