--- a/content/resources/mit7_013s18r7s.md
+++ b/content/resources/mit7_013s18r7s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/9afa8f100bdba4e647ae793925bcffc0_MIT7_013s18R7S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 7 Solutions
 uid: 9afa8f10-0bdb-a4e6-47ae-793925bcffc0
