--- a/content/resources/mit7_013s18r8q.md
+++ b/content/resources/mit7_013s18r8q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/f7a2eb2824cb71216f3510c8334bdaca_MIT7_013s18R8Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 8
 uid: f7a2eb28-24cb-7121-6f35-10c8334bdaca
