--- a/content/resources/mit7_013s18r8s.md
+++ b/content/resources/mit7_013s18r8s.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/e7afd6a70b53825929ad24f672b83aee_MIT7_013s18R8S.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 8 Solutions
 uid: e7afd6a7-0b53-8259-29ad-24f672b83aee
