--- a/content/resources/mit7_013s18r9q.md
+++ b/content/resources/mit7_013s18r9q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-013-introductory-biology-spring-2018/d86b768fe4d05a1918c5f75ff45a3aa0_MIT7_013s18R9Q.pdf
 file_type: application/pdf
+parent_uid: 75da904a-845e-966c-4b84-a93193f1eced
 resourcetype: Document
 title: 7.013 S18 Recitation 9
 uid: d86b768f-e4d0-5a19-18c5-f75ff45a3aa0
